2011-10-11  Ryosuke Niwa  <rniwa@webkit.org>

        GTK build fix attempt after r97197.

        * wtf/BitVector.h:

2011-10-11  Oliver Hunt  <oliver@apple.com>

        Remove unintentional logging.

        * heap/Heap.cpp:

2011-10-11  Oliver Hunt  <oliver@apple.com>

        Tidy up card walking logic
        https://bugs.webkit.org/show_bug.cgi?id=69883

        Reviewed by Gavin Barraclough.

        Special case common cell sizes when walking a block's
        cards.

        * heap/CardSet.h:
        (JSC::::testAndClear):
        * heap/Heap.cpp:
        (JSC::GCTimer::GCCounter::GCCounter):
        (JSC::GCTimer::GCCounter::count):
        (JSC::GCTimer::GCCounter::~GCCounter):
        (JSC::Heap::markRoots):
        * heap/MarkStack.cpp:
        (JSC::MarkStack::reset):
        * heap/MarkStack.h:
        (JSC::MarkStack::visitCount):
        (JSC::MarkStack::MarkStack):
        (JSC::MarkStack::append):
        * heap/MarkedBlock.h:
        (JSC::MarkedBlock::gatherDirtyCellsWithSize):
        (JSC::MarkedBlock::gatherDirtyCells):
        * runtime/Structure.h:
        (JSC::MarkStack::internalAppend):

2011-10-11  Filip Pizlo  <fpizlo@apple.com>

        DFG virtual register allocator should be more aggressive in
        reusing temporary slots
        https://bugs.webkit.org/show_bug.cgi?id=69868

        Reviewed by Oliver Hunt.
        
        1.2% win on V8, neutral elsewhere. The win is probably because it
        increases precision of GC conservative scans.
        
        This required making the DFG::ScoreBoard operate over a bitvector
        of preserved variables, rather than just a preserved variable
        threshold. To do this, I improved the WTF::BitVector class to make
        it more user-friendly. It still retains all previous functionality.
        Also made changes to PackedIntVector to accomodate those changes.
        Finally, this adds more debugging to the virtual register allocator